include meetings-template.md from _includes/

--- a/meetings/2025/202504.md
+++ b/meetings/2025/202504.md
@@ -11,5 +11,5 @@ Stealth Indoor, Attic and Exterior HF antennas.   Many of us have homes in Homeo
 
 Michael McClary, N6MO- Licensed since 1968, Retired from Lockheed Martin as Vice President,14 years ago.   BS Electrical Engineering, BS Computer Science and Master Business Administration.     Lived and operated in non-HOA home but also HOA home, townhome and condo.
 
-{% include ../meetings-template.md %}
+{% include meetings-template.md %}
 
