adding links to the presentation from April 2025

--- a/meetings/2025/202504.md
+++ b/meetings/2025/202504.md
@@ -9,7 +9,11 @@
 
 Stealth Indoor, Attic and Exterior HF antennas.   Many of us have homes in Homeowner Associations, townhomes, condos, or apartments which require stealth antennas but we can still enjoy our ham radio hobby and even work DX.
 
-Michael McClary, N6MO- Licensed since 1968, Retired from Lockheed Martin as Vice President,14 years ago.   BS Electrical Engineering, BS Computer Science and Master Business Administration.     Lived and operated in non-HOA home but also HOA home, townhome and condo.
+Michael McClary, N6MO- Licensed since 1968, Retired from Lockheed Martin as Vice President,14 years ago.   BS Electrical Engineering, BS Computer Science and Master Business Administration. Lived and operated in non-HOA home but also HOA home, townhome and condo.
+
+Presentation:
+* PDF: [download](https://github.com/PAARA-org/paara.org-attachments/blob/main/2025/202504_Stealth_HF_Antennas_McClary.pdf?raw=true) [GoogleViewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/2025/202504_Stealth_HF_Antennas_McClary.pdf?raw=true)
+* PPT: [download](https://github.com/PAARA-org/paara.org-attachments/blob/main/2025/202504_Stealth_HF_Antennas_McClary.ppt?raw=true) [GoogleViewer](https://docs.google.com/viewer?url=https://github.com/PAARA-org/paara.org-attachments/blob/main/2025/202504_Stealth_HF_Antennas_McClary.ppt?raw=true)
 
 {% include meetings-template.md %}
 
