start migrating more meetings, up to November 2023

--- a/meetings/2025/202504.md
+++ b/meetings/2025/202504.md
@@ -1,9 +1,9 @@
 # Stealth HF Antennas
 
-* Date: Apr 4, 2025
-* Time: 07:00 PM Pacific Time
-* Topic: Stealth HF Antennas
-* Presenter: Mike McClary, N6MO
+* **Date**: `Apr 4, 2025`
+* **Time**: `07:00 PM Pacific Time`
+* **Topic**: `Stealth HF Antennas`
+* **Presenter**: `Mike McClary, N6MO`
 
 ## Details
 
