embedding Youtube videos instead of just linking. Add everything from today til Jan 2023

--- a/meetings/2023/202301.md
+++ b/meetings/2023/202301.md
@@ -1,11 +1,20 @@
-# __TITLE__
+# Falling from the Sky: Chasing WX Balloon Transmitters
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Jan 6, 2023`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `Falling from the Sky: Chasing WX Balloon Transmitters`
+* **Presenter**:
+   * `Beau, K6EAU`
+   * `Rikke, KN6KZF`
+   * `Steve, K6WW`
 
 ## Details
+
+Beau, Rikke, and Steve will share their experiences and antics of chasing WX balloons. There are thousands of balloons launched twice a day, at the same time, from sites all over the world, carrying radiosondes to capture and transmit weather data to ground stations. During their roughly two-hour flight, their diameter grows to over 25 feet and they rise to above 100,000 feet when they burst and drop back to earth. Since the radiosonde transmits a tone on UHF, just under the ham band, for about 8 hours, chasing and recovering the payload has become the ultimate T-hunt.
+
+Amateur Operators KN6KZF & K6EAU (a.k.a. Rikke & Beau) enjoy cruising the air waves as a conveniently socially distanced hobby. They have enjoyed reaching out from lighthouses, mountain tops, national parks and even via the International Space Station. Combining the fun of geocaching, balloons and radios has led to a great way to spend time together and get outdoors both launching and recovering various devices. Most recently that involved running Ground Control for Parachute Mobile Mission 42 while 3 skydivers made successive jumps to make both VHF and HF radio contacts while descending from over 10,000 feet under chute.
+
+Steve Wilson, K6WW, is a native Californian who has lived in the SF Bay Area for the last 33 years. Steve's godfather, Alan Young (SK K6KLL), a former broadcast engineer, got him into the hobby in 2001 when Steve got his Technician license. He upgraded to General in 2010 and Extra in 2016. He's a former ARES Emergency Coordinator for Fremont and former President (2014-2016) and current Vice President (2023) of the South Bay Amateur Radio Association (SBARA). He's also a member of the Parachute Mobile support team.
 
 ## Presentation materials
 
