--- a/meetings/2023/202302.md
+++ b/meetings/2023/202302.md
@@ -1,11 +1,17 @@
-# __TITLE__
+# All Bands From An HOA: The Broadband Butterfly Terminated Dipole
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Feb 3, 2023`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `All Bands From An HOA: The Broadband Butterfly Terminated Dipole`
+* **Presenter**: `Corey Ruth, KD3CR`
 
 ## Details
+
+Most hams living under HOA restrictions struggle to put up decent antennas especially for HF. Most options are complex, expensive, cover limited bands, have limited bandwidth, limited effectiveness, or some combination thereof. But there's another option that few people have heard of. It's simple, cheap to build, very flexible and extremely broadbanded, covering all the HF bands without a tuner: the Broadband Butterfly Terminated Dipole (BBTD).
+
+From this presentation, you'll learn about two versions of the BBTD: one that fits stealthily in a small backyard and another that can be completely hidden in an attic. Discover how these antennas work, how to build one for yourself, how they perform on the air (spoiler: a lot better than you'd think!), and what perks and limitations you'll encounter. The BBTD can't defeat the laws of physics but might be just what you need to get on HF, making contacts!
+
+Corey Ruth, KD3CR, is the president of the Queen Anne's Amateur Radio Club in Centreville, MD. His other affiliations include Queen Anne's County RACES, Potomac Valley Radio Club (which focuses on contesting) and the Los Alamos Amateur Radio Club. Corey got his tech license in 2016, upgraded to general in 2017 and to amateur extra in 2020. Living in an HOA-restricted townhouse, he has a keen interest in stealth antennas, believing that every ham     regardless of residence should be able to experience the joy of working the HF bands.
 
 ## Presentation materials
 
