--- a/meetings/2023/202303.md
+++ b/meetings/2023/202303.md
@@ -1,13 +1,19 @@
-# __TITLE__
+# So what is FlexRadio all about?
 
 * **Date**: `$month $day, 2025`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `So what is FlexRadio all about?`
+* **Presenter**: `Michael Walker, VA3MW`
 
 ## Details
 
+Mike VA3MW will spend about an hour showing how today's HF radio is not only better than yesterday's super-het radio, but you get more performance for your dollar.   He will show how your radio now 'scales' towards the future and not grow old the day you bought it.
+
+Mike has been an active Amateur since 1974 and loving every minute of it. From Repeaters, HF, HF Contesting, Satellites and currently tinkering in EME digital modes and 10 Ghz microwave.   As well as being a GA Pilot, he loves HF Station integration, and remote HF operation and currently represents FlexRadio Systems with the Marketing and Education team.   He is very well versed in the FlexRadio technology.   Technology is truly his hobby.
+
 ## Presentation materials
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/D8qWc20yGoY?si=iWakpciVssNGeqPl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
