--- a/meetings/2023/202304.md
+++ b/meetings/2023/202304.md
@@ -1,11 +1,21 @@
-# __TITLE__
+# HOMEBREW NIGHT
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Apr 7, 2023`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `HOMEBREW NIGHT`
+* **Presenter**: ``
 
 ## Details
+
+Time to show off your homebrew project!
+
+Three presenters will be chosen for best homebrew project and awarded HomeDepot gift  cards.
+
+Email Rob at kc6tyd@gmail.com to reserve your presentation. Please keep your presentations to 7 minutes.
+
+In person only, no Zoom
+
+![230315-Homebrew_night-pp-1.ppm.png](230315-Homebrew_night-pp-1.ppm.png)
 
 ## Presentation materials
 
