--- a/meetings/2023/202305.md
+++ b/meetings/2023/202305.md
@@ -1,13 +1,33 @@
-# __TITLE__
+# Ham Radio and Gaming?
 
-* **Date**: `$month $day, 2025`
+* **Date**: `May 5, 2023`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `Ham Radio and Gaming?`
+* **Presenter**: `Jeri Ellsworth, AI6TK, and Amy Herndon, AI6ZU`
 
 ## Details
 
+Jeri Ellsworth, AI6TK, and Amy Herndon, AI6ZU, will show us a new item that they have created that combines ham radio and a fun adventure game.   You won't want to miss this!
+
+At Quartzfest 2023, inventors Jeri Ellsworth (AI6TK) and Amy Herndon (AI6ZU) showcased the Quartzfeng 2023 project, an electronic badge, designed to gamify Ham radio,  that combined ham radio, GPS, APRS, an OLED display, and a Raspberry Pi Pico processor. This device allowed users to participate in a text-based fantasy adventure with monsters and dragons while exploring the campsite.
+
+The badge connected to a base station and computer, transmitting GPS data via APRS to position users in the campground.  As players moved around the campsite, their in-game locations updated. The APRS system facilitated communication between the badge and server, enabling multiple users to collaborate in real-time to defeat virtual foes.
+
+An additional feature of the gameplay was the use of text-to-speech technology, which narrated the gameplay to users as they received updates from the server.
+
+This added a deeper level of immersion for the users.
+
+The project also taught practical ham radio skills through immersive gameplay.
+
+As players used the badge's radio transceiver, they gained hands-on experience with radio operation and network communication.
+
+The Quartzfeng 2023 badge made Quartzfest enjoyable by blending engaging gameplay with valuable ham radio education, promoting teamwork, friendship, and skill development in a shared adventure.
+
+Jeri and Amy will share details about how they created the badge and the learnings they gathered.
+
 ## Presentation materials
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1Ao9ya-2Fpk?si=2O5G-7yng4gTxu6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
