--- a/meetings/2023/202306.md
+++ b/meetings/2023/202306.md
@@ -1,13 +1,19 @@
-# __TITLE__
+# Locating Power Line Noise (and other RFI)
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Jun 2, 2023`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `Locating Power Line Noise (and other RFI)`
+* **Presenter**: `Jeff Stupartis, W4DD`
 
 ## Details
 
+Radio Frequency Interference (RFI) can be generated from many different devices and can decrease or totally eliminate your ability to hear stations on your HF or VHF radio.  In today   s modern world of numerous electronic devices in and around our homes, it   s not a matter of if you have RFI but how many devices are generating it and how significantly is it interfering with your Ham Radio receiving ability.  It can also affect other services like AM radio, FM radio, Over-the-Air TV, DSL Internet, public safety communications, and even cellular telephones.
+
+Jeff became interested in RFI about ten years ago when RFI affected his ability to enjoy ham radio for contesting, weak signal work, and rag chewing.  In addition to providing information on locating RFI, he will also have a few pieces of hardware for show and tell.  Jeff is retired from a large cellular company where he worked in the Advanced Technology Group on spectrum issues including cellular spectrum optimization and FCC spectrum auctions.  In addition to his 20 years in cellular, he also worked in Telephone Operations and Air Defense Communications.  Jeff's background includes an EE, an MBA, and he is a licensed P.E.  Additional information about Jeff can be found on his QRZ web page or page 13 of the August 2022 QST, Member Spotlight.
+
 ## Presentation materials
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NqK_BIArIfs?si=usuJvYFCq2BQwXmw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
