--- a/meetings/2023/202307.md
+++ b/meetings/2023/202307.md
@@ -1,13 +1,21 @@
-# __TITLE__
+# Antenna Potpouri
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Jul 7, 2023`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `Antenna Potpouri`
+* **Presenter**: `Steve Stearns, K6OIK`
 
 ## Details
 
+Cats feature in some famous explanations of radio. Examples are given. Antenna Q has multiple definitions. A fundamental definition of Q is given. One kind of formula for Q is shown to be wrong. Chu's famous 1948 result on antenna Q is revisited and shown to be correct but incomplete. A correction is given that generalizes Chu.   Finally a comparison of HF dipoles versus verticals versus horizontal and vertical loops over ground shows which is better and why. No, it's not just a matter of pattern shape or noise polarization.
+
+
+Speaker bio:   Steve Stearns, K6OIK, started in ham radio while in high school at the height of the Heathkit era.   He holds FCC Amateur Extra and a commercial General Radio Operator license with Radar endorsement.   He previously held Novice, Technician, and 1st Class Radiotelephone licenses.   He studied electrical engineering at California State University Fullerton, the University of Southern California, and Stanford, specializing in electromagnetics, communication engineering and signal processing.   Steve worked at Northrop Grumman Corporation's Electromagnetic Systems Laboratory in San Jose, California.   He retired as Northrop Grumman Technical Fellow.   Steve is serving as vice-president of the Foothills Amateur Radio Society, and served previously as assistant director of ARRL Pacific Division.   He has over 100 professional publications and presentations and ten patents.   Steve's Amateur Radio presentations are archived at  <https://www.fars.k6ya.org/docs/k6oik>, and his professional papers are at IEEE Xplore.   Steve has received numerous awards for professional and community volunteer activities.
+
+
 ## Presentation materials
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/25C802gdg30?si=vAPE8xVqkP75nLJj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
