--- a/meetings/2023/202308.md
+++ b/meetings/2023/202308.md
@@ -1,13 +1,50 @@
-# __TITLE__
+# Building and Maintaining a Contest/DXing Station
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Aug 4, 2023`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `Building and Maintaining a Contest/DXing Station`
+   * Updates to the K9CT Contest Station
+* **Presenter**: `Craig Thompson, K9CT`
 
 ## Details
 
+This talk will address key factors in building a competitive  station for contesting and DXing in the Midwest. Updates have been made that you will find interesting as well as thoughts on the constant maintenance required for weather related damage and mechanical upkeep.
+
+Speaker bio:   Born 1952 - 71 years old. Licensed since 1967 at age 14   .and since 1971 an Extra Class Licensee - licensed 56 years.  Graduated from Bradley University 1974 BSEET plus graduate work in business.
+
+Contester and DXer. DXCC Honor Roll Mixed, CW and Phone, DX Challenge 3035, 11 Band DXCC, 5BWAZ, 11 Band WAS, VUCC 6m to 23 cm and FFMA #12 Attended WRTC 2023 as a competitor.
+
+DXpedition Team member of:
+* TI9K - Cocos Island
+* K4M - Midway Island +
+* PJ7E - Sint Maarten **
+* NH8S - Swains Island ** +
+* 3D2C - Conway Reef
+* K9W - Wake Island **
+* FT5ZM - Amsterdam Island +
+* K1N - Navassa Island +
+* K5P - January 2016 Palmyra Island
+* 3Y0Z - Bouvet Island Jan/Feb 2018 Failed
+* VP6R - Pitcairn Island October 2019
+* CY0S - Sable Island March 2023
+* Co-leader of PJ7E, NH8S, K9W and K5P
+* 4 DXpedition of the Year awards
+
+I have built a Contest Super Station with 16 Towers from 160 to 1296 plus EME. <www.k9ct.us>   and enjoy working as a team in M/S and M/2 contests. We have won US in CQ WW, WPX and ARRL DX in all modes and set new records for W9 and broke the US record for a couple of contests.
+
+Currently adding a LUSO tower for an 80m 3 el Yagi, 10 and 15 OWA and 12/17 JK Yagi and a 6m EME 4 X 7 element yagi tower.
+
+I am the owner and president of Thompson Electronics Company, an electronics systems integrator company serving Illinois since 1980. <www.thompsonet.com>
+
+Also, I am an active runner and have run 7 marathons.
+
+I am married and have one daughter. We live in the country about 20 miles west of Peoria, IL. My contest station is on a small farm about 4 miles from my home where my daughter resides.
+
+Life member of the ARRL and a member of the Maxim Society, CWops, NIDXA and A1 Operator Club. I am Vice President of the NCDXF and treasurer of CWops. I was the President of the Society of Midwest Contesters, SMC 2014 to 2019. I am the chairman of the ARRL Contest Advisory Committee and manage the Pacific Island DXpedition Group, a 501 (c)(3)   tax exempt private foundation. I was recently elected as a director of the ARRL Foundation.
+
 ## Presentation materials
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/yVaqRnoHsBk?si=zT1fXFcPwaEplFL2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
