--- a/meetings/2023/202309.md
+++ b/meetings/2023/202309.md
@@ -1,13 +1,20 @@
-# __TITLE__
+# JEFF K1NSS CONFIDENTIAL
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Sep 8, 2023`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `JEFF K1NSS CONFIDENTIAL`
+   * Conversation With a Ham Cartoonist
+* **Presenter**: `JEFF K1NSS`
 
 ## Details
 
+Too Old Man to change, Jeff K1NSS has been drawing and hamming on and off and on since he was a pup. Jeff Murray is  K9YA Telegraph  eZine staff cartoonist and creator of webcomic  <http://www.dashtoons.com>.  Now retired from freelance ham graphics, he designed almost 300 custom QSLs, including logo and promos for the VK0EK Heard Island DXpedition. He continues to flog his  Art For Shacks  merch at  <http://www.jeffk1nss.com>.
+
+![Jeff](Jeff.jpg)
+
 ## Presentation materials
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/U3YL_wQHuUU?si=j4hMS49nFtTgcdLV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
