--- a/meetings/2023/202310.md
+++ b/meetings/2023/202310.md
@@ -1,13 +1,19 @@
-# __TITLE__
+# Direction Finding with the Kraken SDR
 
-* **Date**: `$month $day, 2025`
+* **Date**: `Oct 6, 2023`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `__TITLE__`
-* **Presenter**: `__PRESENTER__`
+* **Topic**: `Direction Finding with the Kraken SDR`
+* **Presenter**: `Bryan St Clair, K6CBR`
 
 ## Details
 
+Bryan has been a ham for about 10 years with a background in IT security and infrastructure for the last 23 years. He is currently the VP and Chief Controller of the WIN System Amateur Radio Network.
+
+![202310.jpg](202310.jpg)
+
 ## Presentation materials
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/q4w74zkFPC0?si=5ONpB-XYLmThP8pL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
