--- a/meetings/2023/202312.md
+++ b/meetings/2023/202312.md
@@ -15,7 +15,7 @@ Wayne and Eric also jointly received the ARRL's Technical Excellence Award in 20
 
 ## Presentation materials
 
-* [YouTube recording](https://youtu.be/41x2ph0o1j0?si=pKHNDpxkhIILYmqi)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/41x2ph0o1j0?si=RLIOezWszsPD_ja0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
