--- a/meetings/2024/202402.md
+++ b/meetings/2024/202402.md
@@ -13,7 +13,7 @@ Kristen McIntyre, K6WX, has been interested in radio since she was about 5 years
 
 ## Presentation materials
 
-* [YouTube recording](https://youtu.be/Pnh2WVXBGrI?si=XwtYPsHAvTuJswfv)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Pnh2WVXBGrI?si=_l7mCFjQkU1gO8sx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
