--- a/meetings/2024/202403.md
+++ b/meetings/2024/202403.md
@@ -15,7 +15,7 @@ After the break Robin Shepherd will share a video trailer featuring an amateur r
 
 ## Presentation materials
 
-[YouTube recording](https://youtu.be/BXpDWbrHUis?si=zNjfpAOOsOTuFZfU)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BXpDWbrHUis?si=pGqOy3UuHZsI3dXo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
