--- a/meetings/2024/202404.md
+++ b/meetings/2024/202404.md
@@ -19,7 +19,7 @@ Sorry, due to time constraints, we cannot accept any further presenters.
 
 ## Presentation materials
 
-* [YouTube recording](https://youtu.be/NxMge8O8psc?si=TS9nadWf5UDoxb2O)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NxMge8O8psc?si=cTkBg1xa9uzc-qxd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
