--- a/meetings/2024/202406.md
+++ b/meetings/2024/202406.md
@@ -13,7 +13,7 @@ Benjamin Faershtein (KO6CNT) who was recently licensed 5 months ago is a 17-year
 
 ## Presentation materials
 
-* [YouTube recording](https://youtu.be/hYtnZT-5Hwo?si=-mrpipj2pm6HFl6R)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hYtnZT-5Hwo?si=zPQBvMcngPyl5-Vf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
