--- a/meetings/2024/202407.md
+++ b/meetings/2024/202407.md
@@ -19,7 +19,7 @@ In January of 2024 Andreas was a team member of the TX5S expedition to Clipperto
 
 ## Presentation materials
 
-* [YouTube recording](https://www.youtube.com/watch?v=ckCth23Ty6U)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ckCth23Ty6U?si=-Elh4_ldrFmUcHLj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 {% include meetings-template.md %}
 
