--- a/meetings/2024/202409.md
+++ b/meetings/2024/202409.md
@@ -7,9 +7,9 @@
 
 ## Details
 
-The Adventure Radio Protocol provides a common radio frequency and tone signaling standard to make it easier for radio operators in the field to find and communicate with each other. The protocol improves on the Wilderness Protocol by adding signaling methods that allow for unattended alerting for various types of on air activities from emergencies to POTA and SOTA spotting. More details can be found at  http://adventureradio.info/  
+The Adventure Radio Protocol provides a common radio frequency and tone signaling standard to make it easier for radio operators in the field to find and communicate with each other. The protocol improves on the Wilderness Protocol by adding signaling methods that allow for unattended alerting for various types of on air activities from emergencies to POTA and SOTA spotting. More details can be found at  <http://adventureradio.info/>
 
-George Zafiropoulos, KJ6VU, is active in portable operating and building repeater control systems.   George is also the host of the Ham Radio Workbench Podcast focusing on technical topics of interest to the radio amateur.   George tells his story when he was interviewed by Eric Guth on the QSO Today podcast in episode 232 of www.qsotoday.com/podcasts/kj6vu
+George Zafiropoulos, KJ6VU, is active in portable operating and building repeater control systems.   George is also the host of the Ham Radio Workbench Podcast focusing on technical topics of interest to the radio amateur.   George tells his story when he was interviewed by Eric Guth on the QSO Today podcast in episode 232 of <www.qsotoday.com/podcasts/kj6vu>
 
 ## Presentation materials
 
