some files weren't saved

--- a/meetings/2024/202405.md
+++ b/meetings/2024/202405.md
@@ -1,25 +1,19 @@
-# HOMEBREW NIGHT
+# Emergency Communications in Cupertino and Santa Clara County ARES / RACES
 
-* **Date**: `Apr 5, 2024`
+* **Date**: `May 3, 2024`
 * **Time**: `07:00 PM Pacific Time`
-* **Topic**: `HOMEBREW NIGHT`
-* **Presenter**: `Many, not just one`
+* **Topic**: `Emergency Communications in Cupertino and Santa Clara County ARES / RACES`
+* **Presenter**: `Darryl Presley, KI6LDM`
 
 ## Details
 
-From hardware to software, simple to complex. It doesn't matter. If you put your heart and soul into it then show it off! It is strongly suggested that you make your presentation in person to facilitate a better viewing experience.  
+This presentation is an overview of what is required to provide emergency communication within Cupertino and in Santa Clara County.   Today   s world of EmCom has evolved with updated standards required by volunteer radio amateurs when working with emergency operation centers (EOC), served agencies and non-government organizations (NGOs).   We will cover various aspects including expectations, along with training and skills required by today   s hams when it comes to providing emergency communications.
 
-If you present via Zoom then it may work better if you make a PDF file of pictures and any supporting text and share that so you don't have to fumble trying to get the item(s) in the camera view.  
+Darryl Presley (KI6LDM) was first licensed in 2007 as a technician then upgraded to General in 2008 and finally, received his Extra in 2011.   Darryl has been active with the Cupertino Amateur Radio Emergency Services (CARES) since 2007 and is the Field Day coordinator for CARES.   He has a Mutual Aid Communicator (MAC) endorsement from Santa Clara County and also holds a Field Responder level 3 (F3) credential from Santa Clara County ARES/RACES.      Darryl is also an active member and serves as a director on the board of directors for the Palo Alto Amateur Radio Association (PAARA).
 
-Presentation time may be limited due to the number of presenters so be prepared to keep your presentation under 6 minutes. 
-
-Email Rob at kc6tyd AT gmail.com to get on the list.
-Please add Subject: Homebrew and state if you will be presenting on Zoom  
-Sorry, due to time constraints, we cannot accept any further presenters.
+Darryl works at Oracle in engineering and development with a focus on systems high availability and disaster recovery.   Other interests include long walks with our dog Riley and SCUBA diving.
 
 ## Presentation materials
-
-* [YouTube recording](https://youtu.be/NxMge8O8psc?si=TS9nadWf5UDoxb2O)
 
 {% include meetings-template.md %}
 
