--- a/meetings/2025/202503.md
+++ b/meetings/2025/202503.md
@@ -1,9 +1,9 @@
 # Home Brew Night
 
-* Date: Mar 7, 2025
-* Time: 07:00 PM Pacific Time
-* Topic: Home Brew Night
-* Presenter: Many, not just one
+* **Date**: `Mar 7, 2025`
+* **Time**: `07:00 PM Pacific Time`
+* **Topic**: `Home Brew Night`
+* **Presenter**: `Many, not just one`
 
 ## Details
 
