--- a/meetings/2020/202007.md
+++ b/meetings/2020/202007.md
@@ -1,6 +1,6 @@
 # __TITLE__
 
-* **Date**: `__DATE__`
+* **Date**: `July 3, 2020`
 * **Time**: `07:00 PM Pacific Time`
 * **Topic**: `__TITLE__`
 * **Presenter**: `__PRESENTER__`
