fixing links to local images of PDFs to be in /meetings// as otherwise they're absolute and broken:

--- a/meetings/2012/201212.md
+++ b/meetings/2012/201212.md
@@ -7,7 +7,7 @@
 
 ## Details
 
-December raffle prizes [here](prizes-dec2012.pdf).
+December raffle prizes [here](/meetings/2012/prizes-dec2012.pdf).
 
 ## Presentation materials
 
