--- a/meetings/2013/201312.md
+++ b/meetings/2013/201312.md
@@ -14,7 +14,7 @@ For the last decade, John has focused heavily on DXing, contesting, and recruiti
 John is a member of ARRL, REDXA, MLDXCC, NCCC, NCDXC, and PAARA. He is Past-President of the Northern California Contest Club, a Director of the Northern California DX Club, a founding member of the CW Operators' Club, a member of the editorial staff of the National Contest Journal, and a Director of the Northern California DX Foundation.  He was also the co-chair for the 2011 and 2013 International DX Convention in Visalia, CA. John is also PAARA's webmaster.
 
 Our "Dream To Reality" Raffle Prizes
-(Download PDF List Of Prizes [HERE](prizes-dec2013.pdf))
+(Download PDF List Of Prizes [HERE](/meetings/2013/prizes-dec2013.pdf))
 
 * FIRT PRIZE: Elecraft K3  HF- 6m Special Thanks To Elecraft
 * SECOND PRIZE: Icom IC-V80 Thanks Vic AB6SO
