--- a/meetings/2014/201412.md
+++ b/meetings/2014/201412.md
@@ -11,7 +11,7 @@ PROGRAM: ELECRAFT K3 Features & Developments
 SPEAKER: ERIC SWARTZ, WA6HHQ
 
 Our "Dream To Reality" Raffle Prizes
-(Download PDF List Of Prizes [HERE](prizes-dec2014.pdf))
+(Download PDF List Of Prizes [HERE](/meetings/2014/prizes-dec2014.pdf))
 
 * FIRST PRIZE: Elecraft K3  HF- 6m Special Thanks To Elecraft
 * SECOND PRIZE: Yaesu FT-90R Thanks Vic AB6SO
