--- a/meetings/2016/201612.md
+++ b/meetings/2016/201612.md
@@ -11,7 +11,7 @@ PROGRAM: "Elecraft KX-3: Features & Developments"
 by Eric Swartz, WA6HHQ
 
 Our "Dream To Reality" Raffle Prizes
-(Download PDF List Of Prizes [HERE](prizes-dec2016.pdf))
+(Download PDF List Of Prizes [HERE](/meetings/2016/prizes-dec2016.pdf))
 
 ## Presentation materials
 
