--- a/meetings/2017/201712.md
+++ b/meetings/2017/201712.md
@@ -9,7 +9,7 @@
 
 By Wayne Burdick, N6KR Elecraft CEO.
 
-Dream To Reality Prize List [HERE](prizes-dec2017.pdf)
+Dream To Reality Prize List [HERE](/meetings/2017/prizes-dec2017.pdf)
 
 ## Presentation materials
 
