--- a/meetings/2018/201812.md
+++ b/meetings/2018/201812.md
@@ -9,7 +9,7 @@
 
 Dream To Reality Prize List
 
-![DTR-2018-600.png](DTR-2018-600.png)
+![DTR-2018-600.png](/meetings/2018/DTR-2018-600.png)
 
 ## Presentation materials
 
