--- a/meetings/2023/202310.md
+++ b/meetings/2023/202310.md
@@ -9,7 +9,7 @@
 
 Bryan has been a ham for about 10 years with a background in IT security and infrastructure for the last 23 years. He is currently the VP and Chief Controller of the WIN System Amateur Radio Network.
 
-![202310.jpg](202310.jpg)
+![202310.jpg](/meetings/2023/202310.jpg)
 
 ## Presentation materials
 
