--- a/meetings/2024/202412.md
+++ b/meetings/2024/202412.md
@@ -14,7 +14,7 @@ Wayne Burdick, N6KR, is Elecraft's Chief Technology Officer and a principal desi
 
 The Raffle is Back!  The Dream to Reality Raffle will take place during the December meeting.  Prices include a KX3, Bioenno battery, and much more. You must be present to win.
 
-![Raffle Flyer](Raffle-flyer.jpg)
+![Raffle Flyer](/meetings/2024/Raffle-flyer.jpg)
 
 {% include meetings-template.md %}
 
