--- a/meetings/2015/201512.md
+++ b/meetings/2015/201512.md
@@ -11,7 +11,7 @@
 * SPEAKER: ERIC SWARTZ, WA6HHQ
 
 Our "Dream To Reality" Raffle Prizes
-(Download PDF List Of Prizes [HERE](prizes-dec2015.pdf))
+(Download PDF List Of Prizes [HERE](/meetings/2015/prizes-dec2015.pdf))
 
 * FIRST PRIZE: Elecraft KX-3  160- 6m Special Thanks To Elecraft
 * SECOND PRIZE: Yaesu VX-3R
