fixing .md links to .html

--- a/bylaws/1999.md
+++ b/bylaws/1999.md
@@ -2,21 +2,21 @@
 
 As Amended January 8, 1999.
 
-* Original Bylaws Can Be Found [here](/bylaws/1947.md)
-* Latest Bylaws Can Be Found [here](/bylaws.md)
+* Original Bylaws Can Be Found [here](/bylaws/1947.html)
+* Latest Bylaws Can Be Found [here](/bylaws.html)
 
 By-Laws for the regulation, except as otherwise provided by statute or its articles of incorporation of Palo Alto Amateur Radio Association, Inc.
 
 ## Article I: Members
-    a. The members of this corporation shall be divided into two classifications, namely active members and associate members. An active member shall be any person holding a valid amateur radio operator’s license. All other members shall be associate members. All members shall have full voting privileges, but only active members may hold office.
+`a. The members of this corporation shall be divided into two classifications, namely active members and associate members. An active member shall be any person holding a valid amateur radio operator’s license. All other members shall be associate members. All members shall have full voting privileges, but only active members may hold office.`
 
-    b. Any prospective member may apply for membership at his/her first attended meeting. Applications for membership may be voted upon at their second attended meeting. A three fourth’s majority of the members present shall be required to elect an applicant to membership.
+`b. Any prospective member may apply for membership at his/her first attended meeting. Applications for membership may be voted upon at their second attended meeting. A three fourth’s majority of the members present shall be required to elect an applicant to membership.`
 
-    c. Upon being elected to membership, the applicant shall pay dues at a rate set by the Board of Directors.
+`c. Upon being elected to membership, the applicant shall pay dues at a rate set by the Board of Directors.`
 
-    d. Upon election and payment of dues, the applicants name shall be inscribed in the membership book. All dues shall become payable on January 1 for the ensuing year, and members elected to membership during the course of a year shall make a pro rata payment for the balance of the year.
+`d. Upon election and payment of dues, the applicants name shall be inscribed in the membership book. All dues shall become payable on January 1 for the ensuing year, and members elected to membership during the course of a year shall make a pro rata payment for the balance of the year.`
 
-    e. Any member who fails to pay dues for a period of three months shall, at the discretion of the Board of Directors, be dropped from the membership book of the corporation.
+`e. Any member who fails to pay dues for a period of three months shall, at the discretion of the Board of Directors, be dropped from the membership book of the corporation.`
 
 ## Article II: Corporate Powers
 The corporate powers of this corporation shall be vested in a Board of Directors, all of whom shall be members of this corporation in good standing. Five members of the Board of Directors shall constitute a quorum for the transaction of business.
@@ -28,13 +28,13 @@ The Board of Directors shall consist of the officers, four directors and the imm
 ## Article IV: Powers of Directors
 Regular meetings of the Board of Directors shall be held at the call of the President or, in his/her absence, the Vice-President, on such notice as is determined by the Board of Directors. Special meetings of the Board of Directors may be called by the President or Vice-President on twenty-four hours’ notice to each director, either personally, by mail or by telephone. The Directors shall have the power:
 
-    a. to set the dues rate;
+`a. to set the dues rate;`
 
-    b. the Directors shall consider and report at each meeting all proposals for the benefit of the individual members or the general welfare of the corporation;
+`b. the Directors shall consider and report at each meeting all proposals for the benefit of the individual members or the general welfare of the corporation;`
 
-    c. the Board of Directors shall adopt ways and means for the advancement of the corporation, designate work to be done between meetings of the corporation, audit all accounts for expenses, and direct the expenditure of funds of the corporation but not in excess of the amount held by the Treasurer.
+`c. the Board of Directors shall adopt ways and means for the advancement of the corporation, designate work to be done between meetings of the corporation, audit all accounts for expenses, and direct the expenditure of funds of the corporation but not in excess of the amount held by the Treasurer.`
 
-    d. to have general charge of all interests of the organization.
+`d. to have general charge of all interests of the organization.`
 
 ## Article V: Duties of the Directors
 It shall be the duty of the Directors to keep complete records of all their meetings and acts, and make reports to the general membership.
